调整手柄参数，现在可用手柄控制狗的移动

--- a/legged_controllers/config/joy.yaml
+++ b/legged_controllers/config/joy.yaml
@@ -3,14 +3,14 @@ teleop:
     type: topic
     message_type: geometry_msgs/Twist
     topic_name: cmd_vel
-    deadman_buttons: [ 4 ]
+    deadman_buttons: [ ]
     axis_mappings:
       - axis: 0
-        target: angular.z
-        scale: 3.1415
+        target: linear.y
+        scale: 1.0
       - axis: 1
         target: linear.x
         scale: 1.0
       - axis: 3
-        target: linear.y
-        scale: 0.8
+        target: angular.z
+        scale: 1.0
