实现MPC控制和位置控制，并且切换为位置控制时MPC停止

--- a/legged_controllers/config/joy.yaml
+++ b/legged_controllers/config/joy.yaml
@@ -38,3 +38,10 @@ teleop:
       - button: 5
         target: RB
         scale: 1.0
+      # position control
+      - button: 4
+        target: LB
+        scale: 1.0
+      - axis: 2
+        target: LT
+        scale: 1.0
