放弃使用ros_teleop包,自己重写手柄发布节点,并采用新的模式切换方式

--- a/legged_controllers/CMakeLists.txt
+++ b/legged_controllers/CMakeLists.txt
@@ -24,7 +24,7 @@ pkg_check_modules(pinocchio REQUIRED pinocchio)
 
 add_message_files(
         FILES
-        gait_command.msg
+        status_command.msg
 )
 
 generate_messages(
@@ -90,19 +90,33 @@ target_link_libraries(legged_target_trajectories_publisher
         )
 target_compile_options(legged_target_trajectories_publisher PRIVATE ${OCS2_CXX_FLAGS})
 
-# Gait Command publish node
-add_executable(legged_gait_command_publisher
-        src/GaitJoystickPublisher.cpp
+# Gait publish node
+add_executable(legged_gait_publisher
+        src/GaitPublisher.cpp
         )
-add_dependencies(legged_gait_command_publisher
+add_dependencies(legged_gait_publisher
         ${PROJECT_NAME}
         ${catkin_EXPORTED_TARGETS}
         )
-target_link_libraries(legged_gait_command_publisher
+target_link_libraries(legged_gait_publisher
         ${PROJECT_NAME}
         ${catkin_LIBRARIES}
         )
-target_compile_options(legged_gait_command_publisher PRIVATE ${OCS2_CXX_FLAGS})
+target_compile_options(legged_gait_publisher PRIVATE ${OCS2_CXX_FLAGS})
+
+# Joystick Command publish node
+add_executable(legged_joystick_command_publisher
+        src/JoystickCommandPublisher.cpp
+        )
+add_dependencies(legged_joystick_command_publisher
+        ${PROJECT_NAME}
+        ${catkin_EXPORTED_TARGETS}
+        )
+target_link_libraries(legged_joystick_command_publisher
+        ${PROJECT_NAME}
+        ${catkin_LIBRARIES}
+        )
+target_compile_options(legged_joystick_command_publisher PRIVATE ${OCS2_CXX_FLAGS})
 
 #########################
 ###   CLANG TOOLING   ###
@@ -111,7 +125,7 @@ find_package(cmake_clang_tools QUIET)
 if (cmake_clang_tools_FOUND)
     message(STATUS "Run clang tooling for target " ${PROJECT_NAME})
     add_clang_tooling(
-            TARGETS ${PROJECT_NAME} legged_target_trajectories_publisher legged_gait_command_publisher
+            TARGETS ${PROJECT_NAME} legged_target_trajectories_publisher legged_gait_publisher legged_joystick_command_publisher
             SOURCE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/include
             CT_HEADER_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
             CF_WERROR
