legged_controller里添加质心高度和根据这个高度用逆运动学解算得到的12个关节位置发布在话题/target_trajectories_data，targetTrajectoriesPublisher里将接收/status_command改为接收/target_trajectories_data，获取质心高度和关节期望

--- a/legged_controllers/CMakeLists.txt
+++ b/legged_controllers/CMakeLists.txt
@@ -25,6 +25,7 @@ pkg_check_modules(pinocchio REQUIRED pinocchio)
 add_message_files(
         FILES
         status_command.msg
+        target_trajectories_data.msg
 )
 
 generate_messages(
